misc: rename to cosim_jtag

--- a/test/openocd.cfg
+++ b/test/openocd.cfg
@@ -1,6 +1,6 @@
 adapter driver remote_bitbang
 remote_bitbang_port 0
-remote_bitbang_host /tmp/vhpi_jtag.sock
+remote_bitbang_host /tmp/cosim_jtag.sock
 reset_config trst_and_srst
 
 set _CHIPNAME riscv
